Final Draft of Report

--- a/Final Project/Report/0_main.tex
+++ b/Final Project/Report/0_main.tex
@@ -86,7 +86,7 @@ Simple relationships to predict the largest magnitude earthquake of a fault zone
 
 Since the 2004 Sumatra event, there has been more investigation into the cycles controlling subduction zones. In ordinary seismic cycles, large ($ M_w >$ 7) and great ($M_w >$ 8.5) earthquakes release elastic strain accumulated during the previous interseismic period at highly locked asperities, resetting the slip and moment deficit \citep{Nocquet2016}. This implies a local reduction in seismic hazard. The next segment to rupture would be the one with no recent seismic activity. This intuitive relationship is referred to as the seismic gap theory. 
 
-This seismic gap theory does not work well in reality. The same segment can rupture sooner and with larger magnitude than expected based on convergent rate \citep{Nocquet2016}. This suggests that some earthquakes can borrow energy from previous seismic cycles. When this occurs, a cluster of smaller earthquakes can lead to a superevent, greater than magnitude 8.5. This cluster of events is referred to as a supercycle. 
+The seismic gap theory does not work well in reality. The same segment can rupture sooner and with larger magnitude than expected based on convergent rate \citep{Nocquet2016}. This suggests that some earthquakes can borrow energy from previous seismic cycles. When this occurs, a cluster of smaller earthquakes can lead to a superevent, greater than magnitude 8.5. This cluster of events is referred to as a supercycle. 
 
 Literature related to supercycles has identified several potential segments of subduction zones thought capable of producing supercycles \citep{Goldfinger2013, Herrendorfer2015, Nocquet2016}. These areas have been identified through paleoseismic and geological data due to the short time period of historical and seismological data. Figure ({\bf \ref{fig:supercycles}}) shows some of these potential supercycle subduction zones. \citet{Herrendorfer2015} observe that all areas of suggested supercycles have larger than average downdip width. They hypothesize that the larger than average width of the seismogenic zone is a controlling factor on producing ordinary or super seismic cycles. 
 
@@ -98,9 +98,9 @@ In the following sections, I will review case studies from \citet{Goldfinger2013
 
 \subsection{Case Studies}
 
-Paleoseismic data can be used where historical and instrumental data fall short. Historical and instrumental records have too short durations to characterize long term behavior of a fault system. \citet{Goldfinger2013} give an overview of some of the paleoseismic data and methods available in three case studies: Japan,the Himalayan front, and the Cascadias. I will review the results from Japan and the Himalayan front in the next section.
+Paleoseismic data can be used where historical and instrumental data are insufficient. Historical and instrumental records have too short durations to characterize long term behavior of a fault system. \citet{Goldfinger2013} give an overview of some of the paleoseismic data and methods available in three case studies: Japan,the Himalayan front, and the Cascadias. I will review the results from Japan and the Himalayan front in the next section.
 
- The Cascadia case study in particular demonstrates how paleoseismic data can be used to construct a longer time series of past events. The authors use turbidites to construct a 10k year time series before present. Turbidites are deposits from slope failure along the continental margin at river deltas. These failures can be caused by excessive sediment load or by shaking from earthquakes. \citet{Goldfinger2013} correlate events from turbidite cores across different depositional environments. They find that the same event correlates with the mass and thickness of turbidite deposits. This suggests that these deposits were created by shaking from earthquakes. They model coseismic energy release as proportional to mass of turbidite triggered in shaking and assume that between events strain energy accumulates in proportion to the plate convergence rate. They also assume coupling coeffiecient of one and a zero net energy gain over the time series. I show their resulting time series in the next section. 
+ The Cascadia case study, in particular, demonstrates how paleoseismic data can be used to construct a longer time series of past events. The authors use turbidites to construct a 10k year time series before present. Turbidites are deposits from slope failure along the continental margin at river deltas. These failures can be caused by excessive sediment load or by shaking from earthquakes. \citet{Goldfinger2013} correlate events from turbidite cores across different depositional environments. This suggests that these deposits were created by shaking from earthquakes. They model coseismic energy release as proportional to mass of turbidite triggered in shaking and assume that between events strain energy accumulates in proportion to the plate convergence rate. They also assume coupling coeffiecient of one and a zero net energy gain over the time series. I show their resulting time series in the next section. 
 
 \subsection{Numerical Modeling}
 % \begin{figure}
@@ -125,7 +125,7 @@ Paleoseismic data can be used where historical and instrumental data fall short.
 %
 where $v_x$ and $v_y$ are horizontal and vertical velocities, $\sigma'$ is the stress tensor, P is pressure, g is the gravitaional constant, and $\rho$ is density. 
 
-The authors use a constitutive relationship that connects the deviatoric stresses ($\sigma'_{ij}$) and strain rates ($\dot{\epsilon}'_{ij}$) applying linear elasticity and Newtonian viscosity:
+A constitutive relationship connects the deviatoric stresses ($\sigma'_{ij}$) and strain rates ($\dot{\epsilon}'_{ij}$):
 %
 \begin{equation}
   \dot\epsilon'_{ij} = \frac{1}{2G} \frac{D\sigma'_{ij}}{Dt} + \frac{1}{2\eta}\sigma'_{ij}
@@ -155,7 +155,7 @@ where C is cohesion and $\mu_{eff}$ is the effective friction coefficient. $\mu_
 % \begin{equation}
 % 	\chi = 2(\dot{\epsilon}'_{II} - \dot{\epsilon}'^{(viscous)}_{II}) = 2(\dot{\epsilon}'_{II} - \frac{1}{2\eta}\sigma'_{II})
 % \end{equation}
-After solving for the horizontal velocity, \citet{Herrendorfer2015} analyze their models using a set of functions at each time time step and averaging over the width. Among these functions are the cumulative sum of the displacements, D, and strength excess, SE. The displacement tracks the accumulated elastic strain through time:
+After solving for the horizontal velocity, \citet{Herrendorfer2015} analyze their models using a set of functions at each time time step and averaging over the width of the seismogenic zone. Among these functions are the cumulative sum of the displacements, D, and strength excess, SE. The displacement tracks the accumulated elastic strain through time:
 %
 \begin{equation}
 D(t) = \frac{1}{W} \sum_{j=1}^t \sum_{x=d}^u V(x,j)\cdot \Delta t \cdot \Delta x,	
@@ -177,7 +177,7 @@ where $u$ is the updip limit and $d$ is the downdip limit. The strength excess r
 
 For the Japan case study, \citet{Goldfinger2013} review the tsunami record. In the Sendai area of Japan, there is record of an event in 869 as well as two predecessors that each produced a tsunami reaching 3-4 km inland, similar to the 2011 earthquake. These large tsunamis support the existence of periodic outsized earthquakes (greater than $M_w$ 9) with recurrence intervals between 800-1200 years. 
 
-Along the Himalayan front, paleoseismic evidence shows earthquakes that produced surface displacement of up to 26 meters.  Four modern earthquakes between 1897 and 1950 were close to the maximum considered earthquake with magnitudes between 7.8 and 8.4. However, none of the modern events have produced surface rupture. This suggests that the front is capable of producing even more damaging earthquakes. The Japan and Himalayan cases studies both suggest that the maximum magnitude a fault system is capable of producing may be unknown. 
+Along the Himalayan front, paleoseismic evidence shows earthquakes that produced surface displacement of up to 26 meters.  Four modern earthquakes between 1897 and 1950 reached the maximum considered earthquake with magnitudes between 7.8 and 8.4. However, none of the modern events have produced surface rupture. This suggests that the front is capable of producing even more damaging earthquakes. The Japan and Himalayan cases studies both suggest that the maximum magnitude a fault system is capable of producing may be unknown. 
 
 \begin{figure}
 % \hspace{-1cm}
@@ -188,20 +188,20 @@ Along the Himalayan front, paleoseismic evidence shows earthquakes that produced
 
 \subsubsection{Cascadian Subduction Zone}
 
- \citet{Goldfinger2013} identify four seismic clusters in their time series of the Cascadian subduction zone. Figure {\bf \ref{fig:energyCycle}} shows the the time series modeling the energy state using the turbidite mass and thickeness. Beginning from 10 thousand years before present (1950), cluster four shows an even energy state before falling to a low after a large event. Cluster three climbs steadily until falling to a similar low. During this period there are several seismic cycles with relatively low stress drops that do not relieve all of the accumulated strain. A total stress drop finally happens at the end of the cluster with an event much larger than the others within the same cluster. Cluster two differs from the previous in that it does not culminate in an over-sized event. Rather, it climbs and then falls over several seismic cycles until it reaches a low energy value about 2500 years BP. The end of the cluster marks a long gap of about 1,000 years of constant increase in energy. Cluster one then slowly decreases the energy state until the A.D. 1700 $M_w$ ~9.0 earthquake. From the time series, it appears that the 1700 event is not atypical, suggesting that the region may be capable of producing even greater magnitude events. \citet{Goldfinger2013} note that the scale factor is based on the condition of no net energy change over the 10,000 years but that changing this parameter does not change the pattern observed. The authors also note that the seismic coupling coefficient only changes the pattern if the value is allowed to vary between events. 
+ \citet{Goldfinger2013} identify four seismic clusters in their time series of the Cascadian subduction zone. Figure {\bf \ref{fig:energyCycle}} shows the the time series modeling the energy state using the turbidite mass and thickeness. Beginning from 10 thousand years before present (1950), cluster four shows an even energy state before falling to a low after a large event. Cluster three climbs steadily until falling to a similar low. During this period there are several seismic cycles with relatively low stress drops that do not relieve all of the accumulated strain. A total stress drop finally happens at the end of the cluster with an event much larger than the others within the same cluster. Cluster two differs from the previous in that it does not culminate in an over-sized event. Rather, it climbs and then falls over several seismic cycles until it reaches a low energy value about 2500 years BP. The end of the cluster marks a long gap of about 1,000 years of constant increase in energy. Cluster one then slowly decreases the energy state until the A.D. 1700 $M_w$ ~9.0 earthquake. From the time series, it appears that the 1700 event is not atypical, suggesting that the region may be capable of producing even greater magnitude events. 
 
-The four clusters modeled by \citet{Goldfinger2013} demonstrate that some events in this subduction zone release energy from previous cycles. This subduction zone is neither slip nor time predictable. Energy release is not tied to recurrence intervals as some events can release energy accumulated from previous seismic cycles. The authors make a few observations relating the energy state to the behavior of the clusters. High energy states results in one very large event, (as in the case of cluster four), or a series of smaller events (as in cluster two). Low energy state results in a long gap in seismicity (cluster 2) or a series of small earthquakes with net energy gain over several cycles (cluster 3). 
+The four clusters modeled by \citet{Goldfinger2013} demonstrate that some events in this subduction zone release energy from previous cycles. This subduction zone is neither slip nor time predictable. Energy release is not tied to recurrence intervals as some events can release energy accumulated from previous seismic cycles. High energy states results in one very large event, (as in the case of cluster four), or a series of smaller events (as in cluster two). Low energy state results in a long gap in seismicity (cluster two) or a series of small earthquakes with net energy gain over several cycles (cluster three). 
 
-The case studies above all indicate that we may not have seen the largest earthquakes these areas can produce. Each subduction zone could be capable of producing supercycles. Zones of supercycles represent areas with a potentially devastating culminating event. Given this potential, it is import to investigate what may control supercycle behavior.
+The Cascadia case study indicates that we may not have seen the largest earthquakes this area can produce. Other subduction zone could also be capable of producing supercycles. Zones of supercycles represent areas with a potentially devastating culminating event. Given this potential, it is import to investigate what may control supercycle behavior.
 
 \begin{figure}
-	\includegraphics[width=1\linewidth]{Figures/Herrendorfer/ngeo2427-f2.jpeg}
-	\caption{Comparison of characteristics of long (LW) and small (SW) downdip width subduction zone models. Earthquakes indicated by astericks and superevents are circled. Subfigures show cumulative sum over time ({\bf a}) Excess strength ({\bf b}) and S parameter ({\bf b}). S parameter is the ratio of initial strength excess to stress change during an event. Event types are also indicated by color. From \citet{Herrendorfer2015}.}
+	\includegraphics[width=1\linewidth]{Figures/Herrendorfer/ngeo2427-f2_edit.jpg}
+	\caption{Comparison of characteristics of long (LW) and small (SW) downdip width subduction zone models. Earthquakes indicated by astericks and superevents are circled. Subfigures show cumulative sum over time ({\bf a}) and excess strength ({\bf b}). From \citet{Herrendorfer2015}.}
 	\label{fig:SZOwidth}
 \end{figure}
 \begin{figure}
 	\includegraphics[width=1\linewidth]{Figures/Herrendorfer/ngeo2427-f3.jpeg}
-	\caption{caption}
+	\caption{Rupture styles in LW reference model. Subcritical rupture (a), pulse-like rupture (b), and crack-like rupture (c). Left column shows initial state just before rupture while middle column shows the final state. The excess strength is shaded green and is the difference between the stress and yield strength. The right column shows the spatiotemporal evolution of the horizontal velocity during rupture. From \citet{Herrendorfer2015}}
 	\label{fig:ruptureStyle}
 \end{figure}
 
@@ -214,7 +214,7 @@ The authors define three different types of events in the LW model. Column three
 
 Figure {\bf \ref{fig:ruptureStyle}} shows strength excess (shaded green) before and after each of the event types in the first two columns. Subcritical events ({\bf \ref{fig:ruptureStyle}a}) nucleate close to the downdip limit of the seismogenic zone and transfers stress close to the stopping location (about 125 km from backstop). Pulse-like ruptures ({\bf \ref{fig:ruptureStyle}b}) nucleate from the downdip limit for short duration and transfer stress updip (about 300 km from backstop). These combine to shift the strain towards the center of the seismogenic zone that eventually results in the crack-like event ({\bf \ref{fig:ruptureStyle}c}) that ruptures the entire zone. 
 
-The width of the seismogenic zone controls the overall strength excess. Small width zones have lower overall strength excess and are characterized by crack-like events. The average strength excess is increased by increased width and leads to transition from crack-like ruptures of the entire zone to smaller preparatory subcritical and pulse-like ruptures leading up to culminating crack-like rupture. 
+The width of the seismogenic zone controls the overall strength excess. Small width zones have lower overall strength excess and are characterized by crack-like events. The average strength excess is increased by increased width and leads to transition from crack-like ruptures of the entire zone to subcritical and pulse-like ruptures that prepare the entire zone for the culminating crack-like rupture. 
 
 %------------------------------------------------
 
